Replace translation files with current state of translations on Transifex. This means a complete Dutch translation, and removes the deprecated strings from the other files. For strings left to translate, look on the Transifex page of the MakeHuman project.

--- a/makehuman/data/languages/portugese.json
+++ b/makehuman/data/languages/portugese.json
@@ -4,14 +4,14 @@
     "All Files (*.*)": "All Files (*.*)",
     "All Files": "All Files",
     "File chooser": "File chooser",
-    "Sort": "Sort",
-    "Refresh": "リフレシュ",
-    "By name": "By name",
-    "By created": "By created",
-    "By modified": "By modified",
-    "By size": "By size",
-    "Save": "セーブ",
-    "Export": "エクスポート",
+    "Sort": "Tipo",
+    "Refresh": "Atualizar",
+    "By name": "Por nome",
+    "By created": "Por criação",
+    "By modified": "Por modificação",
+    "By size": "Por tamanho",
+    "Save": "Salvar",
+    "Export": "Exportar",
     "Mesh Format": "Mesh Format",
     "Rig format": "Rig format",
     "Maps": "Maps",
@@ -20,28 +20,28 @@
     "meter": "meter",
     "inch": "inch",
     "centimeter": "centimeter",
-    "Files": "ファイル",
-    "Load": "ロード",
-    "Modelling": "モデル",
-    "Geometries": "Geometries",
+    "Files": "Arquivos",
+    "Load": "Carregar",
+    "Modelling": "Modelagem",
+    "Geometries": "Geometria",
     "Materials": "Materials",
     "Pose/Animate": "Pose/Animate",
-    "Rendering": "Rendering",
-    "Category": "Category",
-    "Macro": "マクロ",
-    "Gender": "性別",
-    "Age": "年齢",
+    "Rendering": "Renderizar",
+    "Category": "Categoria",
+    "Macro": "Macro",
+    "Gender": "Sexo",
+    "Age": "Idade",
     "Muscle": "Muscle",
-    "Weight": "体重",
-    "Height": "高さ",
+    "Weight": "Peso",
+    "Height": "Altura",
     "Proportions": "Proportions",
     "African": "African",
-    "Asian": "アジア",
+    "Asian": "Asiático",
     "Caucasian": "Caucasian",
-    "Main": "Main",
-    "Breast": "Breast",
+    "Main": "Principal",
+    "Breast": "Peito",
     "Breast size": "Breast size",
-    "Breast firmness": "Breast firmness",
+    "Breast firmness": "Firmeza da mama",
     "Vertical position": "Vertical position",
     "Horizontal distance": "Horizontal distance",
     "Pointiness": "Pointiness",
@@ -68,11 +68,11 @@
     "Trans Depth": "Trans Depth",
     "Nubian": "Nubian",
     "Temple": "Temple",
-    "Eyebrows": "Eyebrows",
+    "Eyebrows": "Sobrancelhas",
     "Trans Vert": "Trans Vert",
-    "Neck": "Neck",
+    "Neck": "Pescoço",
     "Trans Horiz": "Trans Horiz",
-    "Right eye": "Right eye",
+    "Right eye": "Olho direito",
     "R Eye Height1": "R Eye Height1",
     "R Eye Height2": "R Eye Height2",
     "R Eye Height3": "R Eye Height3",
@@ -82,7 +82,7 @@
     "R Eye Size": "R Eye Size",
     "R Eye Corner1": "R Eye Corner1",
     "R Eye Corner2": "R Eye Corner2",
-    "Left eye": "Left eye",
+    "Left eye": "Olho esquerdo",
     "L Eye Height1": "L Eye Height1",
     "L Eye Height2": "L Eye Height2",
     "L Eye Height3": "L Eye Height3",
@@ -92,15 +92,15 @@
     "L Eye Size": "L Eye Size",
     "L Eye Corner1": "L Eye Corner1",
     "L Eye Corner2": "L Eye Corner2",
-    "Nose size": "Nose size",
-    "Nose size details": "Nose size details",
+    "Nose size": "Tamanho do nariz",
+    "Nose size details": "Detalhes do Tamanho do nariz",
     "Nostril Width": "Nostril Width",
     "Point Width": "Point Width",
     "Width1": "Width1",
     "Width2": "Width2",
     "Width3": "Width3",
-    "Nose features": "Nose features",
-    "Compression": "Compression",
+    "Nose features": "Características do Nariz",
+    "Compression": "Compressão",
     "Curve": "Curve",
     "Greek": "Greek",
     "Hump": "Hump",
@@ -108,14 +108,14 @@
     "Point": "Point",
     "Septumangle": "Septumangle",
     "Flaring": "Flaring",
-    "Mouth size": "Mouth size",
-    "Mouth size details": "Mouth size details",
+    "Mouth size": "Tamanho da boca",
+    "Mouth size details": "Detalhes do tamanho Boca",
     "Lowerlip Height": "Lowerlip Height",
     "Lowerlip Width": "Lowerlip Width",
     "Upperlip Height": "Upperlip Height",
     "Upperlip Width": "Upperlip Width",
     "Cupidsbow Width": "Cupidsbow Width",
-    "Mouth features": "Mouth features",
+    "Mouth features": "Características Boca",
     "Lowerlip Ext": "Lowerlip Ext",
     "Angles": "Angles",
     "Lowerlip Middle": "Lowerlip Middle",
@@ -125,7 +125,7 @@
     "Upperlip Ext": "Upperlip Ext",
     "Upperlip Middle": "Upperlip Middle",
     "Cupidsbow": "Cupidsbow",
-    "Right ear": "Right ear",
+    "Right ear": "Orelha direita",
     "R Ear Trans Depth": "R Ear Trans Depth",
     "R Ear Size": "R Ear Size",
     "R Ear Trans Vert": "R Ear Trans Vert",
@@ -137,7 +137,7 @@
     "R Ear Width": "R Ear Width",
     "R Ear Wing": "R Ear Wing",
     "R Ear Flap": "R Ear Flap",
-    "Left ear": "Left ear",
+    "Left ear": "Orelha esquerda",
     "L Ear Trans Depth": "L Ear Trans Depth",
     "L Ear Size": "L Ear Size",
     "L Ear Trans Vert": "L Ear Trans Vert",
@@ -149,12 +149,12 @@
     "L Ear Width": "L Ear Width",
     "L Ear Wing": "L Ear Wing",
     "L Ear Flap": "L Ear Flap",
-    "Chin": "Chin",
+    "Chin": "Queixo",
     "Prominent": "Prominent",
     "Width": "Width",
     "Bones": "Bones",
     "Prognathism": "Prognathism",
-    "Cheek": "Cheek",
+    "Cheek": "Bochecha",
     "L Cheek Volume": "L Cheek Volume",
     "L Cheek Bones": "L Cheek Bones",
     "L Cheek Inner": "L Cheek Inner",
@@ -163,47 +163,47 @@
     "R Cheek Bones": "R Cheek Bones",
     "R Cheek Inner": "R Cheek Inner",
     "R Cheek Trans Vert": "R Cheek Trans Vert",
-    "Face": "かお",
+    "Face": "Rosto",
     "Torso": "Torso",
     "Vshape": "Vshape",
     "Hip": "Hip",
-    "Stomach": "Stomach",
-    "Tone": "筋緊張",
+    "Stomach": "Estômago",
+    "Tone": "Tom",
     "Pregnant": "Pregnant",
-    "Buttocks": "Buttocks",
-    "Pelvis": "Pelvis",
+    "Buttocks": "Nádegas",
+    "Pelvis": "Pélvis",
     "Bulge": "Bulge",
-    "Right hand": "Right hand",
+    "Right hand": "Mão direita",
     "R Hand Fingers Diameter": "R Hand Fingers Diameter",
     "R Hand Fingers Length": "R Hand Fingers Length",
     "R Hand Scale": "R Hand Scale",
     "R Hand Trans": "R Hand Trans",
-    "Left hand": "Left hand",
+    "Left hand": "Mão esquerda",
     "L Hand Fingers Diameter": "L Hand Fingers Diameter",
     "L Hand Fingers Length": "L Hand Fingers Length",
     "L Hand Scale": "L Hand Scale",
     "L Hand Trans": "L Hand Trans",
-    "Right foot": "Right foot",
+    "Right foot": "Pé direito",
     "R Foot Scale": "R Foot Scale",
     "R Foot Trans": "R Foot Trans",
-    "Left foot": "Left foot",
+    "Left foot": "Pé esquerdo",
     "L Foot Scale": "L Foot Scale",
     "L Foot Trans": "L Foot Trans",
-    "Right arm": "Right arm",
+    "Right arm": "Braço direito",
     "R Lowerarm Scale Depth": "R Lowerarm Scale Depth",
     "R Lowerarm Scale Horiz": "R Lowerarm Scale Horiz",
     "R Lowerarm Scale Vert": "R Lowerarm Scale Vert",
     "R Upperarm Scale Depth": "R Upperarm Scale Depth",
     "R Upperarm Scale Horiz": "R Upperarm Scale Horiz",
     "R Upperarm Scale Vert": "R Upperarm Scale Vert",
-    "Left arm": "Left arm",
+    "Left arm": "Braço esquerdo",
     "L Lowerarm Scale Depth": "L Lowerarm Scale Depth",
     "L Lowerarm Scale Horiz": "L Lowerarm Scale Horiz",
     "L Lowerarm Scale Vert": "L Lowerarm Scale Vert",
     "L Upperarm Scale Depth": "L Upperarm Scale Depth",
     "L Upperarm Scale Horiz": "L Upperarm Scale Horiz",
     "L Upperarm Scale Vert": "L Upperarm Scale Vert",
-    "Right leg": "Right leg",
+    "Right leg": "Perna direita",
     "R Leg Genu": "R Leg Genu",
     "R Lowerleg Scale Depth": "R Lowerleg Scale Depth",
     "R Lowerleg Scale Horiz": "R Lowerleg Scale Horiz",
@@ -211,7 +211,7 @@
     "R Upperleg Scale Depth": "R Upperleg Scale Depth",
     "R Upperleg Scale Horiz": "R Upperleg Scale Horiz",
     "R Upperleg Scale Vert": "R Upperleg Scale Vert",
-    "Left leg": "Left leg",
+    "Left leg": "Perna esquerda",
     "L Leg Genu": "L Leg Genu",
     "L Lowerleg Scale Depth": "L Lowerleg Scale Depth",
     "L Lowerleg Scale Horiz": "L Lowerleg Scale Horiz",
@@ -219,19 +219,19 @@
     "L Upperleg Scale Depth": "L Upperleg Scale Depth",
     "L Upperleg Scale Horiz": "L Upperleg Scale Horiz",
     "L Upperleg Scale Vert": "L Upperleg Scale Vert",
-    "Arms and Legs": "Arms and Legs",
-    "Options": "オプション",
+    "Arms and Legs": "Braços e pernas",
+    "Options": "Opções",
     "Rescan targets' folder": "Rescan targets' folder",
     "Folders": "Folders",
-    "Targets": "Targets",
+    "Targets": "Alvos",
     "custom": "custom",
-    "Custom": "Custom",
+    "Custom": "Personalizado",
     "Neck circum": "Neck circum",
     "Neck height": "Neck height",
-    "Upperarm": "Upperarm",
+    "Upperarm": "Braços",
     "Upper arm circum": "Upper arm circum",
     "Upperarm length": "Upperarm length",
-    "Lowerarm": "Lowerarm",
+    "Lowerarm": "Antebraço",
     "Lowerarm length": "Lowerarm length",
     "Wrist circum": "Wrist circum",
     "Front chest dist": "Front chest dist",
@@ -241,53 +241,53 @@
     "Nape to waist": "Nape to waist",
     "Waist to hip": "Waist to hip",
     "Shoulder dist": "Shoulder dist",
-    "Hips": "Hips",
+    "Hips": "Quadris",
     "Hips circum": "Hips circum",
-    "Upperleg": "Upperleg",
+    "Upperleg": "Braço",
     "Upperleg height": "Upperleg height",
     "Thigh circ.": "Thigh circ.",
-    "Lowerleg": "Lowerleg",
+    "Lowerleg": "Canela",
     "Lowerleg height": "Lowerleg height",
     "Calf circum": "Calf circum",
-    "Ankle": "Ankle",
+    "Ankle": "Tornozelo",
     "Ankle circum": "Ankle circum",
-    "Statistics": "Statistics",
+    "Statistics": "Estatística",
     "Height: ": "Height: ",
     "Chest: ": "Chest: ",
     "Waist: ": "Waist: ",
     "Hips: ": "Hips: ",
-    "Measure": "Measure",
-    "Settings": "オプション",
+    "Measure": "Medição",
+    "Settings": "Configurações",
     "Side": "Side",
-    "Background settings": "Background settings",
-    "Front": "Front",
-    "Back": "Back",
-    "Left": "Left",
-    "Right": "Right",
-    "Top": "Top",
-    "Bottom": "Bottom",
+    "Background settings": "Configurações de fundo",
+    "Front": "Frente",
+    "Back": "Volta",
+    "Left": "Esquerda",
+    "Right": "Direita",
+    "Top": "Superior",
+    "Bottom": "Inferior:",
     "Other": "Other",
     "Opacity: %d%%": "Opacity: %d%%",
     "Move && Resize": "Move && Resize",
     "Show in foreground": "Show in foreground",
-    "Background": "背景",
+    "Background": "Imagem de fundo",
     "Utilities": "Utilities",
     "Projection": "Projection",
     "Choose background": "Choose background",
-    "Project background": "Project background",
-    "Project lighting": "Project lighting",
+    "Project background": "Fundo do Projeto",
+    "Project lighting": "Iluminação do Projeto",
     "Project UV topology": "Project UV topology",
     "Display settings": "Display settings",
     "Shadeless": "Shadeless",
-    "Clothes": "ふく",
+    "Clothes": "Roupas",
     "Tag filter": "Tag filter",
     "Hide faces under clothes": "Hide faces under clothes",
     "Eyes": "Eyes",
     "Eyelashes": "Eyelashes",
     "Material": "Material",
     "Human": "Human",
-    "Skin": "ひふ",
-    "Hair": "かみ",
+    "Skin": "Pele",
+    "Hair": "Cabelo",
     "Teeth": "Teeth",
     "Tongue": "Tongue",
     "Skin/Material": "Skin/Material",
@@ -296,24 +296,24 @@
     "Rig info": "Rig info",
     "Bones: ": "Bones: ",
     "Description: ": "Description: ",
-    "Skeleton": "Skeleton",
-    "Tools": "Tools",
+    "Skeleton": "Esqueleto",
+    "Tools": "Ferramentas",
     "Save As...": "Save As...",
     "Viewer": "Viewer",
-    "Resolution": "Resolution",
+    "Resolution": "Resolução",
     "Anti-aliasing": "Anti-aliasing",
     "Render": "Render",
     "Lightmap SSS": "Lightmap SSS",
     "Rendering methods": "Rendering methods",
     "Scene": "Scene",
-    "Slider behavior": "Slider behavior",
-    "Update real-time": "Update real-time",
+    "Slider behavior": "Comportamento deslizar",
+    "Update real-time": "Atualização em tempo real",
     "Update normals real-time": "Update normals real-time",
     "Fit objects real-time": "Fit objects real-time",
     "Auto-zoom camera": "Auto-zoom camera",
     "Slider images": "Slider images",
-    "Units": "Units",
-    "Metric": "Metric",
+    "Units": "Unidades",
+    "Metric": "Métrica ",
     "Imperial": "Imperial",
     "Startup": "Startup",
     "Preload macro targets": "Preload macro targets",
@@ -321,22 +321,22 @@
     "Theme": "Theme",
     "Native look": "Native look",
     "MakeHuman": "MakeHuman",
-    "Language": "Language",
-    "English": "English",
+    "Language": "Idioma",
+    "English": "Inglês ",
     "Castilian_es": "Castilian_es",
-    "German": "German",
-    "Japanese": "日本語",
-    "Dutch": "Dutch",
+    "German": "Alemão",
+    "Japanese": "Japonês",
+    "Dutch": "Holandês",
     "Empty": "Empty",
     "Arabic": "Arabic",
     "General": "General",
     "3D Viewport Speed": "3D Viewport Speed",
     "Normal speed: %d": "Normal speed: %d",
-    "Camera": "Camera",
-    "Move": "Move",
-    "Rotate": "Rotate",
+    "Camera": "Câmera",
+    "Move": "Mover",
+    "Rotate": "Girar",
     "Zoom": "Zoom",
-    "Invert wheel": "Invert wheel",
+    "Invert wheel": "Inverter roda",
     "Mouse": "Mouse",
     "Rotate Up": "Rotate Up",
     "Rotate Down": "Rotate Down",
@@ -348,24 +348,24 @@
     "Pan Right": "Pan Right",
     "Zoom In": "Zoom In",
     "Zoom Out": "Zoom Out",
-    "Front view": "Front view",
-    "Right view": "Right view",
-    "Top view": "Top view",
-    "Back view": "Back view",
-    "Left view": "Left view",
-    "Bottom view": "Bottom view",
+    "Front view": "Vista frontal",
+    "Right view": "Vista direita",
+    "Top view": "Vista superior",
+    "Back view": "Vista traseira",
+    "Left view": "Vista esquerda",
+    "Bottom view": "Vista inferior",
     "Reset camera": "Reset camera",
-    "Actions": "Actions",
-    "Undo": "元に戻す",
-    "Redo": "やり直し",
-    "Navigation": "Navigation",
-    "Help": "ヘルプ",
-    "Exit": "終了",
-    "Shortcuts": "Shortcuts",
-    "Support options": "Support options",
+    "Actions": "Ações",
+    "Undo": "Desfazer",
+    "Redo": "Refazer",
+    "Navigation": "Navegação",
+    "Help": "Ajuda",
+    "Exit": "Sair",
+    "Shortcuts": "Atalhos",
+    "Support options": "Opções de Suporte",
     "Manual": "Manual",
-    "Report bug": "Report bug",
-    "Request feature": "Request feature",
+    "Report bug": "Reportar erro",
+    "Request feature": "Solicitação de recurso",
     "Forum": "Forum",
     "FaceBook page": "FaceBook page",
     "Level": "Level",
@@ -378,7 +378,7 @@
     "Logs": "Logs",
     "Biovision Hierarchy BVH": "Biovision Hierarchy BVH",
     "Animations": "Animations",
-    "Collada (dae)": "Collada (dae)",
+    "Collada (dae)": "Collada (DAE)",
     "Feet on ground": "Feet on ground",
     "Y up, face Z": "Y up, face Z",
     "Y up, face X": "Y up, face X",
@@ -387,23 +387,23 @@
     "Filmbox (fbx)": "Filmbox (fbx)",
     "Lightmap": "Lightmap",
     "MD5": "MD5",
-    "Blender exchange (mhx)": "Blender exchange (mhx)",
+    "Blender exchange (mhx)": "Blender (mhx)",
     "Rotation limits": "Rotation limits",
     "Export for Rigify": "Export for Rigify",
-    "Wavefront obj": "Wavefront obj",
+    "Wavefront obj": "Objeto Wavefront",
     "Normals": "Normals",
     "Ogre3D": "Ogre3D",
     "Skeleton (skel)": "Skeleton (skel)",
-    "Stereolithography (stl)": "Stereolithography (stl)",
+    "Stereolithography (stl)": "Estereolitografia (STL)",
     "ASCII": "ASCII",
-    "Binary": "Binary",
+    "Binary": "Binário",
     "UV map": "UV map",
     "Plugins": "Plugins",
     "neutral": "neutral",
     "Gender: %s, Age: %d, Muscle: %.2f%%, Weight: %.2f%%, Height: %.2f %s": "Gender: %s, Age: %d, Muscle: %.2f%%, Weight: %.2f%%, Height: %.2f %s",
     "Don't show this again": "Don't show this again",
-    "Yes": "Yes",
-    "No": "No",
+    "Yes": "Sim",
+    "No": "Não",
     "MakeHuman is a character creation suite. It is designed for making anatomically correct humans.\nParts of this program may contain nudity.\nDo you want to proceed?": "MakeHuman is a character creation suite. It is designed for making anatomically correct humans.\nParts of this program may contain nudity.\nDo you want to proceed?",
     "Bones: %s": "Bones: %s",
     "Blender Exchange (*.mhx)": "Blender Exchange (*.mhx)",
@@ -467,7 +467,7 @@
     "Writing Skeleton": "Writing Skeleton",
     "Skeleton export finished": "Skeleton export finished",
     "By resetting the human you will lose all your changes, are you sure?": "By resetting the human you will lose all your changes, are you sure?",
-    "Reset": "リセット",
+    "Reset": "Redefinir",
     "You have unsaved changes. Are you sure you want to exit the application?": "You have unsaved changes. Are you sure you want to exit the application?",
     "Your system does not support OpenGL shaders (GLSL v1.20 required).\nOnly simple shading will be available.": "Your system does not support OpenGL shaders (GLSL v1.20 required).\nOnly simple shading will be available.",
     "Could not save settings file.": "Could not save settings file.",
