Compared local portugese with transifex version. Local version did not contribute anything over transifex version. Downloaded transifex version to overwrite local portugese. Don't merge this with stable right now, it's far from finished.

--- a/makehuman/data/languages/portuguese.json
+++ b/makehuman/data/languages/portuguese.json
@@ -1,9 +1,9 @@
 {
     "Browse": "Browse",
-    "MakeHuman Models (*.mhm)": "MakeHuman Models (*.mhm)",
-    "All Files (*.*)": "All Files (*.*)",
-    "All Files": "All Files",
-    "File chooser": "File chooser",
+    "MakeHuman Models (*.mhm)": "Modelos MakeHuman (*.mhm)",
+    "All Files (*.*)": "Todos os arquivos (*.*)",
+    "All Files": "Todos os arquivos",
+    "File chooser": "Seletor de arquivos",
     "Sort": "Tipo",
     "Refresh": "Atualizar",
     "By name": "Por nome",
@@ -14,51 +14,51 @@
     "Export": "Exportar",
     "Mesh Format": "Mesh Format",
     "Rig format": "Rig format",
-    "Maps": "Maps",
+    "Maps": "Mapas",
     "Scale units": "Scale units",
-    "decimeter": "decimeter",
-    "meter": "meter",
-    "inch": "inch",
-    "centimeter": "centimeter",
+    "decimeter": "decímetro",
+    "meter": "metro",
+    "inch": "polegada",
+    "centimeter": "centímetro",
     "Files": "Arquivos",
     "Load": "Carregar",
     "Modelling": "Modelagem",
     "Geometries": "Geometria",
-    "Materials": "Materials",
-    "Pose/Animate": "Pose/Animate",
+    "Materials": "Materiais",
+    "Pose/Animate": "Posar/Animar",
     "Rendering": "Renderizar",
     "Category": "Categoria",
     "Macro": "Macro",
     "Gender": "Sexo",
     "Age": "Idade",
-    "Muscle": "Muscle",
+    "Muscle": "músculo",
     "Weight": "Peso",
     "Height": "Altura",
-    "Proportions": "Proportions",
-    "African": "African",
+    "Proportions": "Proporções",
+    "African": "Africano",
     "Asian": "Asiático",
-    "Caucasian": "Caucasian",
+    "Caucasian": "Caucasiano",
     "Main": "Principal",
     "Breast": "Peito",
-    "Breast size": "Breast size",
+    "Breast size": "Tamanho do peito",
     "Breast firmness": "Firmeza da mama",
-    "Vertical position": "Vertical position",
-    "Horizontal distance": "Horizontal distance",
+    "Vertical position": "Posição vertical",
+    "Horizontal distance": "Distância horizontal",
     "Pointiness": "Pointiness",
     "Volume": "Volume",
-    "Genitals": "Genitals",
-    "Penis Length": "Penis Length",
-    "Penis Circ": "Penis Circ",
-    "Penis Testicles": "Penis Testicles",
-    "Head shape": "Head shape",
-    "Angle": "Angle",
+    "Genitals": "Genitália",
+    "Penis Length": "Tamanho do pênis",
+    "Penis Circ": "Circunferência do pênis",
+    "Penis Testicles": "Testículos",
+    "Head shape": "Forma da cabeça",
+    "Angle": "Ângulo",
     "Oval": "Oval",
     "Round": "Round",
-    "Rectangular": "Rectangular",
-    "Square": "Square",
+    "Rectangular": "Retangular",
+    "Square": "Quadrado",
     "Triangular": "Triangular",
     "Invertedtriangular": "Invertedtriangular",
-    "Diamond": "Diamond",
+    "Diamond": "Diamante",
     "Head size": "Head size",
     "Scale Depth": "Scale Depth",
     "Scale Horiz": "Scale Horiz",
@@ -184,10 +184,10 @@
     "L Hand Scale": "L Hand Scale",
     "L Hand Trans": "L Hand Trans",
     "Right foot": "Pé direito",
-    "R Foot Scale": "R Foot Scale",
+    "R Foot Scale": "Escala do pé direito",
     "R Foot Trans": "R Foot Trans",
     "Left foot": "Pé esquerdo",
-    "L Foot Scale": "L Foot Scale",
+    "L Foot Scale": "Escala do pé esquerdo",
     "L Foot Trans": "L Foot Trans",
     "Right arm": "Braço direito",
     "R Lowerarm Scale Depth": "R Lowerarm Scale Depth",
@@ -258,7 +258,7 @@
     "Hips: ": "Hips: ",
     "Measure": "Medição",
     "Settings": "Configurações",
-    "Side": "Side",
+    "Side": "Lado",
     "Background settings": "Configurações de fundo",
     "Front": "Frente",
     "Back": "Volta",
@@ -266,8 +266,8 @@
     "Right": "Direita",
     "Top": "Superior",
     "Bottom": "Inferior:",
-    "Other": "Other",
-    "Opacity: %d%%": "Opacity: %d%%",
+    "Other": "Outro",
+    "Opacity: %d%%": "Opacidade: %d%%",
     "Move && Resize": "Move && Resize",
     "Show in foreground": "Show in foreground",
     "Background": "Imagem de fundo",
@@ -281,31 +281,31 @@
     "Shadeless": "Shadeless",
     "Clothes": "Roupas",
     "Tag filter": "Tag filter",
-    "Hide faces under clothes": "Hide faces under clothes",
-    "Eyes": "Eyes",
-    "Eyelashes": "Eyelashes",
+    "Hide faces under clothes": "Esconder faces sob as roupas",
+    "Eyes": "Olhos",
+    "Eyelashes": "Cílios",
     "Material": "Material",
-    "Human": "Human",
+    "Human": "Humano",
     "Skin": "Pele",
     "Hair": "Cabelo",
-    "Teeth": "Teeth",
-    "Tongue": "Tongue",
-    "Skin/Material": "Skin/Material",
-    "Topologies": "Topologies",
+    "Teeth": "Dentes",
+    "Tongue": "Língua",
+    "Skin/Material": "Pele/Material",
+    "Topologies": "Topologias",
     "Rig presets": "Rig presets",
     "Rig info": "Rig info",
-    "Bones: ": "Bones: ",
-    "Description: ": "Description: ",
+    "Bones: ": "Ossos:",
+    "Description: ": "Descrição: ",
     "Skeleton": "Esqueleto",
     "Tools": "Ferramentas",
-    "Save As...": "Save As...",
+    "Save As...": "Salvar como...",
     "Viewer": "Viewer",
     "Resolution": "Resolução",
     "Anti-aliasing": "Anti-aliasing",
     "Render": "Render",
     "Lightmap SSS": "Lightmap SSS",
-    "Rendering methods": "Rendering methods",
-    "Scene": "Scene",
+    "Rendering methods": "Métodos de renderização",
+    "Scene": "Cena",
     "Slider behavior": "Comportamento deslizar",
     "Update real-time": "Atualização em tempo real",
     "Update normals real-time": "Update normals real-time",
@@ -327,9 +327,9 @@
     "German": "Alemão",
     "Japanese": "Japonês",
     "Dutch": "Holandês",
-    "Empty": "Empty",
-    "Arabic": "Arabic",
-    "General": "General",
+    "Empty": "Vazio",
+    "Arabic": "Árabe",
+    "General": "Geral",
     "3D Viewport Speed": "3D Viewport Speed",
     "Normal speed: %d": "Normal speed: %d",
     "Camera": "Câmera",
@@ -366,18 +366,18 @@
     "Manual": "Manual",
     "Report bug": "Reportar erro",
     "Request feature": "Solicitação de recurso",
-    "Forum": "Forum",
-    "FaceBook page": "FaceBook page",
-    "Level": "Level",
+    "Forum": "Fórum",
+    "FaceBook page": "Página do Facebook",
+    "Level": "Nível",
     "Debug": "Debug",
-    "Message": "Message",
+    "Message": "Mensagem",
     "Notice": "Notice",
-    "Warning": "Warning",
-    "Error": "Error",
+    "Warning": "Aviso",
+    "Error": "Erro",
     "Copy to Clipboard": "Copy to Clipboard",
     "Logs": "Logs",
     "Biovision Hierarchy BVH": "Biovision Hierarchy BVH",
-    "Animations": "Animations",
+    "Animations": "Animações",
     "Collada (dae)": "Collada (DAE)",
     "Feet on ground": "Feet on ground",
     "Y up, face Z": "Y up, face Z",
@@ -388,7 +388,7 @@
     "Lightmap": "Lightmap",
     "MD5": "MD5",
     "Blender exchange (mhx)": "Blender (mhx)",
-    "Rotation limits": "Rotation limits",
+    "Rotation limits": "Limites de rotação",
     "Export for Rigify": "Export for Rigify",
     "Wavefront obj": "Objeto Wavefront",
     "Normals": "Normals",
@@ -457,11 +457,11 @@
     "Rig for use with Second Life": "Rig for use with Second Life",
     "Rig intended for use with the Xonotic engine": "Rig intended for use with the Xonotic engine",
     "AntiAliasing": "AntiAliasing",
-    "Rendering complete": "Rendering complete",
+    "Rendering complete": "Renderização completa",
     "You need to restart for your language changes to be applied.": "You need to restart for your language changes to be applied.",
     "Images which are placed in %s will show up here.": "Images which are placed in %s will show up here.",
     "Click on a mouse action box using the modifiers and buttons which you would like to assign to the given action.": "Click on a mouse action box using the modifiers and buttons which you would like to assign to the given action.",
-    "This combination is already in use.": "This combination is already in use.",
+    "This combination is already in use.": "Esta combinação já está em uso.",
     "Click on a shortcut box and press the keys of the shortcut which you would like to assign to the given action.": "Click on a shortcut box and press the keys of the shortcut which you would like to assign to the given action.",
     "No log items selected": "No log items selected",
     "Writing Skeleton": "Writing Skeleton",
