README edited online with Bitbucket

--- a/README
+++ b/README
@@ -36,7 +36,8 @@ Help and support
 ----------------
 
 For further help, have a look at our documentation at 
-http://www.makehuman.org/documentation and frequently asked questions 
+http://www.makehuman.org/documentation 
+and frequently asked questions 
 http://www.makehuman.org/faq
 
 If you have other questions, feel free to ask them on our forums at 
