Be less specific about AGPL version in summary, less chance of it going out-of-sync

--- a/README
+++ b/README
@@ -12,7 +12,7 @@ Development status: http://bugtracker.makehuman.org
 License
 -------
 
-The MakeHuman source and data are released under the AGPLv3 license.
+The MakeHuman source and data are released under the AGPL license.
 This also includes everything that is exported from or by MakeHuman. 
 However, respecting a set of conditions (which are explained in section 
 C of license.txt), you are allowed to instead use the CC0 license 
